Os usuarios podem fazer recuperar a senha e fazer um pre-cadastro no sistema